--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,54 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.navbar {
+  display:flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: white;
+  background: linear-gradient(60deg, lightblue,blue,mediumblue,darkblue);
+  padding: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navbar a {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: white;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar button {
+  border: none;
+  background: none;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.login-cont {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  padding: 30px;
+  align-items: center;
+  justify-content: center;
 }
 
-.card {
-  padding: 2em;
+.login-cont form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 30px;
+  
 }
 
-.read-the-docs {
-  color: #888;
+.login-cont input {
+  padding: 10px 30px;
+  border: none;
+  background-color: rgb(226, 244, 255);
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+input[type="submit"] {
+  background-color: mediumblue;
+  color: white;
 }
