--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,33 @@ input[type="submit"] {
   background-color: mediumblue;
   color: white;
 }
+
+.quiz-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.question-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin:10px;
+  margin-bottom: 0;
+  padding: 30px;
+  font-size: 1.2rem;
+}
+
+.question-cont button {
+  border: none;
+  background: none;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  background-color: dodgerblue;
+  margin:20px;
+  padding: 10px 20px;
+}
